--- a/apps/nest-upms/tsconfig.json
+++ b/apps/nest-upms/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": { "*": ["types/*"] },
+    "baseUrl": ".",
+    "paths": { "*": ["types/*"] },
     "module": "commonjs",
     "declaration": false,
     "noImplicitAny": false,
